--- a/src/main/resources/ci/xlj/plugins/jobflowcreator/Messages.properties
+++ b/src/main/resources/ci/xlj/plugins/jobflowcreator/Messages.properties
@@ -1,6 +1,7 @@
 DisplayName=Job Flow Creator
 CopyTool=Please copy "jt.jar" to path 
-JobNameNotNull=Job name cannot be null
+InvalidJobName=Job name cannot be null
 InvalidVersionName=Invalid version name
 SessionExpired=Session has expired. Please re-login.
 Success=Job flow created.
+NoSuchJob=Input job does not exist.
